*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9155 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -96,6 +96,7 @@ module.EmbedMedia.EmbedFlickrImages.desc=تضمين صور Flickr
 module.EmbedMedia.EmbedDeviantArtImages.desc=تضمين صور Deviantart
 module.EmbedMedia.EmbedGenericImages.desc=تضمين صور إذا كان الرابط يشير إلى صورة
 module.EmbedMedia.EmbedGenericImagesClever.desc=يحاول تخمين رابط الصورة الحقيقي حتى وإن كان النص الأصلي ليس مشيرا إلى صورة.
+module.EmbedMedia.EmbedImageshack.desc=دعم أكبر في ImageShack (Firefox و Chrome فقط)
 #Forum direct page links
 module.DirectPageLinks.desc=إضافة روابط تسمح لك بالتوجه لصفحة معينة في موضوع في المنتدى.
 #
@@ -256,7 +257,9 @@ module.ContextMenuCopy.HtMl.desc=خيار لنسخ المحتوى المختار
 module.ContextMenuCopy.Table.desc=خيار لنسخ الجدول بلغة HT-ML
 module.NewMail.desc=تظليل عداد الرسائل الجديدة وردود المنتدى الجديدة
 module.NewMail.NotifyMail.desc=إظهار تنبيه في حالة وجود رسائل بريدية جديدة
+module.NewMail.NotifyMailSound.desc=تنبيه صوتي في البريد الجديد
 module.NewMail.NotifyForum.desc=إظهار تنبيه في حالة وجود ردود جديدة في المنتدى
+module.NewMail.NotifyForumSound.desc=تنبيه صوتي في رد المنتدى الجديد
 module.CopyYouth.desc=خاصية النسخ للتقارير التدريبية الخاصة بأكاديمية الشباب
 module.CopyYouth.TrainingReport.desc=التقرير التدريبي
 module.CopyYouth.ScoutComment.desc=تعليق الكشاف
@@ -378,6 +381,7 @@ module.Filter.desc=يضيف عوامل التصفية لصفحة كبار الل
 module.RatingsDisplay.desc=عرض متوسط التقييمات بأسلوب مختلف
 module.RatingsDisplay.DenominationsRange.desc=في نطاق فئات 0-20
 module.RatingsDisplay.HatStats.desc=كما HatStats
+module.SafeForWork.desc=استبدال الأيقونة والنص في تبويبات هاتريك لتصبح أكثر أمانا. تأكد من تعطيل كل الوحدات الأخرى التي قد تكون خطيرة وخاصة تلك المتعلقة بالتنبيهات.
 
 # -----------------------------------------------------------------------------
 
