--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -243,6 +243,7 @@ module.MatchIncome.desc=Vis tilskuerindtægterne I kampreferatet
 # IN-GAME STRINGS. translate first
 
 #Save for work
+SafeForWork.title=Titel
 
 #Extrashortcuts
 
@@ -265,6 +266,7 @@ PlayerBirthday.BirthdayToday=Fødselsdage i dag
 #Newsfeed filter
 
 #team pages
+sidebarBox.actions=Handlinger
 ExtendedPlayerDetails.perseason=/ Sæson
 ExtraPlayerInfo.defensiveTrainer=En %s træner, der er defensivt orienteret.
 ExtraPlayerInfo.offensiveTrainer=En %s træner, der er offensivt orienteret.
@@ -544,7 +546,7 @@ ConfirmActions.sackstaff=Ønsker du at fyr %num %slags?
 #following string uses pluralForms
 notify.newMail=Du har modtaget %s nye mail.;Du har modtaget %s nye mails.
 #following string uses pluralForms
-notify.newForumMessage=Der er %s nye forum svar til dig.;Der er %s nye forum svar til dig.
+notify.newForumMessage=Der er %s ny forum svar til dig.;Der er %s nye forum svar til dig.
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -570,6 +572,7 @@ copy.fixturesSource=Kopiere kampprogram kildekode
 copy.fixturesSource.copied=Kildekode til Kampprogram er blevet kopieret.
 
 #matches
+matches.income=Indtægter\:
 matches.attackdefensebars=Angreb vs forsvar
 matches.right=Højre
 matches.left=Venstre
@@ -787,6 +790,9 @@ TeamPopupLinks.OpenNewTab=Åben i ny fane
 
 #toolbar
 toolbar.title=FoxTrick
+toolbar.disableTemporary=Deaktiver midlertidigt
+toolbar.featureHighlight=Fremhæv funktioner
+toolbar.translationKeys=Vis oversættelse taster
 toolbar.preferences=Indstillinger
 status.active=aktiv
 status.enabled=﻿aktiverede, men ikke aktive på %s
@@ -840,8 +846,21 @@ prefs.loadSave.export=Eksportere indstillinger og/eller personlige indstillinger
 prefs.loadSave.export.prefs=Indstillinger
 prefs.loadSave.export.notes=Personlige indstillinger (skabeloner, brugerdefinerede hyperlinks og transfer filtre)
 prefs.loadSave.export.token=OAuth token/hemmelig
+prefs.loadSave.export.notice=Kopiere indholdet i tekstområdet og gem som en fil, så du kan importere indstillingerne i fremtiden.
+prefs.loadSave.import=Importere indstillinger (aktuelle indstillinger vil blive overskrevet)
+prefs.loadSave.import.notice=Indsætte dine gemte indstillinger i tekstområdet, og tryk på "Importer" for at importere dine indstillinger.
 
+prefs.additional.title=Generelle indstillinger
+prefs.additional.xmlLoad=Indlæs XMLs for ekstra oplysninger fra Hattrick
+prefs.additional.smallCopyIcons=Vis kopi ikoner i overskriften i stedet for sidepanel
+prefs.additional.anstoss2Icons=Brug Anstoss2 ikoner for specialiteter
+prefs.additional.featureHighlight=Fremhæv FoxTrick funktioner
+prefs.additional.translationKeys=Vis oversættelse taster i stedet for oversættelser
+prefs.additional.HTMLDebugLog=Vis FoxTrick log, på bunden af sider (til fejlfinding)
 
+prefs.feedback.saved=Indstillinger gemt\!
+prefs.feedback.loaded=Indstillinger indlæst\!
+prefs.feedback.dismiss=(Klik for at afvise denne meddelelse)
 
 link.title=Links
 link.homepage=Hjemmeside
@@ -854,6 +873,9 @@ link.nightlyOpera=Udviklings versioner til Opera
 link.nightlySafari=Udviklings versioner til Safari
 link.recentChanges=Seneste ændringer
 
+releaseNotes.show=Vis versionsnoter efter hver opdatering
+releaseNotes.showFor=Vis Versionsnoter for\:
+releaseNotes.version=Version\:
 
 about.copyright=Ophavsret
 about.maintainers=﻿Vedligeholdere
@@ -861,6 +883,11 @@ about.developers=Udviklere
 about.translators=Oversættere
 about.designers=Designere
 
+prefs.restoreDefault.ask=Er du sikker på du vil gendanne standardindstillingerne?
+prefs.deleteToken.ask=Slet OAuth token/hemmeligt for HoldID %s?
+prefs.disableAllModules.ask=Er du sikker på du vil deaktivere alle moduler?
+prefs.revokePermissions.ask=Er du sikker på du vil tilbagekalde alle valgfri tilladelser?
+prefs.getPermissions.alert=%s har brug for tilladelse til at arbejde. Tillad adgang i den følgende dialogboks. Hvis du afslå vil dette modul funktionen blive deaktiveret.
 
 ###EOF
 
