--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -97,6 +97,7 @@ module.EmbedMedia.EmbedFlickrImages.desc=Umetnite Flickr slike
 module.EmbedMedia.EmbedDeviantArtImages.desc=Umetnite Deviantart slike
 module.EmbedMedia.EmbedGenericImages.desc=Postavi slike ako je link na sliku
 module.EmbedMedia.EmbedGenericImagesClever.desc=Pokušajte pogoditi točnu adresu slike čak i ako se ne čini da originalni link ne vodi do slike.
+module.EmbedMedia.EmbedImageshack.desc=Produžena potpora za ImageShack (samo za Firefox i Chrome)
 #Forum direct page links
 module.DirectPageLinks.desc=Dodaje linkove koji omogućuju skok na određenu stranicu u forumskoj temi.
 #
