*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9156 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ja/foxtrick.properties
+++ b/content/locale/ja/foxtrick.properties
@@ -96,6 +96,7 @@ module.EmbedMedia.EmbedFlickrImages.desc=Flickrの画像を埋め込む
 module.EmbedMedia.EmbedDeviantArtImages.desc=Deviantartの画像を埋め込む
 module.EmbedMedia.EmbedGenericImages.desc=リンクが画像へのリンクである場合、画像を埋め込む
 module.EmbedMedia.EmbedGenericImagesClever.desc=元のリンクの表示が初回は画像で表示されていなくても、正しい画像のアドレスの推測を試みる
+module.EmbedMedia.EmbedImageshack.desc=拡張ImageShackをサポートする(Firefox and Chrome only)
 #Forum direct page links
 module.DirectPageLinks.desc=フォーラムのスレッドにあるページへジャンプするためのリンクを追加する
 #
