--- a/content/locale/ko/foxtrick.properties
+++ b/content/locale/ko/foxtrick.properties
@@ -97,6 +97,7 @@ module.EmbedMedia.EmbedFlickrImages.desc=Flickr 이미지 포함
 module.EmbedMedia.EmbedDeviantArtImages.desc=Deviantart 이미지 포함
 module.EmbedMedia.EmbedGenericImages.desc=링크가 이미지에 연결되어 있으면 이미지를 포함
 module.EmbedMedia.EmbedGenericImagesClever.desc=원래 링크가 이미지를 제대로 가르키지 않으면 올바른 이미지 주소를 추측하기를 시도.
+module.EmbedMedia.EmbedImageshack.desc=확장된 ImageShack 지원(Firefox와 Chrome만)
 #Forum direct page links
 module.DirectPageLinks.desc=토론장 스레드 안에 특정 페이지로 이동하는 링크 추가.
 #
