*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9157 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -89,12 +89,14 @@ module.EmbedMedia.EmbedYoutubeVideos.desc=Embeber vídeos de YouTube
 module.EmbedMedia.EmbedVimeoVideos.desc=Embeber vídeos de Vimeo
 module.EmbedMedia.EmbedFunnyOrDieVideos.desc=Embeber vídeos de FunnyOrDie
 module.EmbedMedia.EmbedDailymotionVideos.desc=Embeber vídeos de Dailymotion
+module.EmbedMedia.EmbedModeOEmebed.desc=Utilizar oEmbed para embeber archivos multimedia (Firefox y Chrome)
 module.EmbedMedia.ReplaceLinksByTitles.desc=Reemplazar el texto del enlace con el de la etiqueta del item multimedia, por ejemplo, el nombre de una imagen
 module.EmbedMedia.EmbedSoundCloud.desc=Embeber Soundcloud
 module.EmbedMedia.EmbedFlickrImages.desc=Embeber imágenes de Flickr
 module.EmbedMedia.EmbedDeviantArtImages.desc=Embeber imágenes de Deviantart
 module.EmbedMedia.EmbedGenericImages.desc=Embeber imágenes si el enlace es un enlace de una imagen
 module.EmbedMedia.EmbedGenericImagesClever.desc=Intentar predecir la dirección de la imagen aun si el enlace original no parezca estar apuntando a una imagen.
+module.EmbedMedia.EmbedImageshack.desc=Soporte extendido de ImageShack (Firefox y Chrome)
 #Forum direct page links
 module.DirectPageLinks.desc=Agregar un enlace que te permita saltar a una pagina de un hilo del foro.
 #
