*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9160 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -134,6 +134,7 @@ TeamStats.boxheader=Lagoversikt
 #note to translators. use abreviations of league table where applicable
 
 #Newsfeed filter
+LeagueNewsFilter.lineupChanges=Lagoppstilling utskiftninger
 
 #team pages
 sidebarBox.actions=Funksjoner
@@ -200,6 +201,7 @@ Stamina=Kondisjon
 #following string uses pluralForms
 Coach=Trener
 
+skilltable.youthplayer=Ungdomsspiller
 
 #confirms
 ConfirmActions.bid=Er du sikker på at du vil by på denne spilleren? Prisen er %s.
@@ -360,6 +362,7 @@ tab.matches=Kamper
 tab.links=Lenker
 
 
+prefs.storedData.title=Lagrede innstillinger
 # NOTE - please preserve the braces, inner content will be converted to link
 
 
