average series statistics and Ratings localization strings
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9167 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -382,12 +382,16 @@ module.Filter.desc=Додaје филтере на страници Најбољ
 module.RatingsDisplay.desc=Приказ просека оцена у статистици 
 module.RatingsDisplay.DenominationsRange.desc=Деноминације у распону од 0-20
 module.RatingsDisplay.HatStats.desc=Хатстатс
+module.RatingsDisplay.HTSums.desc=Хеттрик збирне оцене
 module.SafeForWork.desc=Замењује фавикон и Хеттрик наслов у отвореним табовима да би вашем шефу било мање сумњиво. Најбоље да искључите и друге модуле који вас могу компромитовати, нарочито модуле за обавештења.
 
 # ----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
+rating.average=Просечна оцена
 
 #Save for work
 SafeForWork.title=Наслов
