links feed. zip default but also accepts unzipped. callback once for multiple feeds
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9173 1e3807c3-0949-0410-b78e-337b627472c1

--- a/res/README
+++ b/res/README
@@ -1,11 +1,2 @@
-Files under this directory will be committed to Google Code, and users will
-access the files via Apache rewrite rule in http://www.foxtrick.org/.
-
-For example, res/staff/chpp.json will be uploaded to
-http://foxtrick.googlecode.com/svn/trunk/res/staff/chpp.json, and users
-will access the file via http://www.foxtrick.org/data/staff/chpp.json.
-
-
----
-Ryan Li <ryan@ryanium.com>
-23 Sep 2011
+Files under this directory will be zipped automatically every day.
+Users load the zipped versions, so there is some delay.
