*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9174 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -244,10 +244,26 @@ module.MatchIncome.desc=Vis tilskuerindtægterne I kampreferatet
 
 #Save for work
 SafeForWork.title=Titel
+SafeForWork.icon=Ikon
 
 #Extrashortcuts
+ExtraShortcuts.statistics=Statistik
+ExtraShortcuts.transfers=Transfers
+ExtraShortcuts.ManageCHPP=Administrere dine CHPP produkter
+ExtraShortcuts.prefs=Indstillinger
+ExtraShortcuts.ftprefs=FoxTrick Indstillinger
 
 #HistoryStats
+HistoryStats.season=Sæson
+HistoryStats.season.short=S
+HistoryStats.cup=Cup runde
+HistoryStats.cup.short=C
+HistoryStats.league=Division
+HistoryStats.league.short=Div.
+HistoryStats.finalPosition=Endelig divisions stilling
+HistoryStats.finalPosition.short=P
+HistoryStats.cupwinner=Cup vinder
+HistoryStats.cupwinner.short=CV
 
 # YouthPromotes
 #following string uses pluralForms
@@ -255,7 +271,18 @@ YouthPromotes.future=Spilleren kan blive forfremmet %1 dag senere, på %2.;Spill
 YouthPromotes.today=Spiller kan rykkes op i dag\!
 
 #teamstats+filters
+TeamStats.boxheader=Hold oversigt
 TeamStats.General=Generel
+TeamStats.PlayerNotToOld=Spillere < 19 år
+TeamStats.PlayerToOld=Spillere > \= 19 år
+TeamStats.Cards=Kort
+TeamStats.Injured=Skadet
+TeamStats.TransferListed=Til salg
+TeamStats.Pictures=Ansigter
+TeamStats.PlayedLatest=Spillede i sidste kamp
+TeamStats.NotPlayedLatest=Spillede ikke i sidste kamp
+TeamStats.NotTransferListed=Ikke til salg
+TeamStats.ActivePlayers=Aktive spillere
 
 #PlayerBirthday
 PlayerBirthday.BirthdayToday=Fødselsdage i dag
@@ -271,6 +298,7 @@ ExtendedPlayerDetails.perseason=/ Sæson
 ExtraPlayerInfo.defensiveTrainer=En %s træner, der er defensivt orienteret.
 ExtraPlayerInfo.offensiveTrainer=En %s træner, der er offensivt orienteret.
 ExtraPlayerInfo.balancedTrainer=En %s træner, der hverken er offensivt eller defensivt orienteret.
+LineupShortcut.lineup=Opstilling
 ShowFriendlyBooked.ShowFriendlies=﻿Vis venskabskampe
 
 #Transfer prices
@@ -282,6 +310,7 @@ AddLeaveConfButton.LeaveForum=Forlad forum
 AddLeaveConfButton.alert=Klik på knappen 'gem' på den næste side for at forlade denne konference.
 HideSignatures.signaturetoggle=Signatur
 MarkUnread.markunread=Markere som ulæst herfra
+EmbedMedia.EmbeddedImage=Integreret billede
 ForumStripHattrickLinks.ask=Ønsker du at fravælge hattrick serveren fra linkene for at gøre det anvendeligt i forum?
 MarkAllAsRead.title=Markér tråde i alle fora som læste
 
@@ -542,6 +571,7 @@ ConfirmActions.hirestaff=Ønsker du at ansætte %num %slags?
 ConfirmActions.sackstaff=Ønsker du at fyr %num %slags?
 
 # links
+links.boxheader=Links
 
 #following string uses pluralForms
 notify.newMail=Du har modtaget %s nye mail.;Du har modtaget %s nye mails.
